# memorydb

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: why-these-choices.md
docs/decisions/: TD-001-embedded-substrate-not-distributed-tj.md  TD-002-ports-and-adapters-generic-substrate.md  TD-003-sqlite-single-store-recursive-cte.md  TD-004-zero-dep-core-bruteforce-vectors.md  TD-005-multilang-treesitter-coarse-edges-confidence.md  TD-006-graph-aware-embeddings-staleness.md  TD-007-intent-routed-retrieval-tj-is-orchestration.md  TD-008-defer-temporal-confidence-ontology-reflection.md  TD-009-versioned-identity-for-temporal-history.md  TD-010-pydantic-domain-models.md  TD-010-query-embedding-cache-model-scoped.md  TD-011-query-embedding-cache-model-scoped.md
docs/research/: akasicdb-2026.md
docs/specs/: README.md  _TEMPLATE.md  adversarial-review-2026-06-22-impl.md  adversarial-review-2026-06-22.md  adversarial-review-2026-06-23-mega.md  adversarial-review-2026-06-23-round6.md  adversarial-review-2026-06-23-round7.md  adversarial-review-2026-06-23-round8.md  (+3 more)
scratchpad/: repro.py  repro2.py  repro3.py  repro4.py  repro5.py  repro_api.py  repro_noise.py  repro_real.py  test_bf_vs_ann.py  test_explain_e2e.py  test_index_search.py  test_kcap.py  test_types_escalation.py  test_types_nonortho.py
scratchpad/proj/: a.py
tests/: test_api.py  test_cli.py  test_code_adapter.py  test_context.py  test_embedding_pipeline.py  test_eval.py  test_graph.py  test_indexer.py  test_intent_classifier.py  test_memory_adapter.py  test_migrations.py  test_python_resolver.py  test_query_cache.py  test_ranker.py  test_remediation.py  test_remediation_impl.py  test_review_mega.py  test_review_r3.py  test_substrate.py  test_vector_index.py
(+59 files in other folders)
