[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memorydb"
version = "0.0.1"
description = "Embedded knowledge substrate (relational + graph + vectors) for local LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2"]  # models are pydantic BaseModels (TD-004, revised 2026-06-22)

[project.scripts]
memorydb = "memorydb.cli:main"
memorydb-eval = "memorydb.eval.cli:main"

[project.optional-dependencies]
vector = ["sqlite-vec>=0.1.0"]            # ANN accelerator (TD-004)
code = ["tree-sitter>=0.21", "tree-sitter-language-pack>=0.1"]  # multilang AST (TD-005)
graph = ["networkx>=3.0"]                 # on-demand graph algorithms (TD-003)
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
